[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/playerList.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/playerLevelSelection.gd" type="Script" id=2]
[ext_resource path="res://src/UI/levelDisplayer.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.258824, 0.258824, 0.258824, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_offset = Vector2( 0.114, 0 )

[node name="levelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -265.0
margin_right = 300.0
margin_bottom = 240.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -72.0
margin_right = 46.0
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelDisplayer" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -143.5
margin_right = 132.5
margin_bottom = 143.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelName" type="Label" parent="Panel/levelDisplayer"]
anchor_right = 1.0
margin_left = 93.0
margin_right = -87.0
margin_bottom = 39.0
text = "MapName"
align = 1
valign = 1

[node name="levelPicture" type="TextureRect" parent="Panel/levelDisplayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -244.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamemode" type="Label" parent="Panel/levelDisplayer"]
margin_left = 15.0803
margin_top = 22.2236
margin_right = 90.0803
margin_bottom = 36.2236
text = "Gamemode"

[node name="playerNb" type="Label" parent="Panel/levelDisplayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.5244
margin_top = 23.0173
margin_right = -9.52441
margin_bottom = 37.0173
text = "Number"
align = 2

[node name="Next" type="Button" parent="Panel/levelDisplayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 87.5
margin_top = -36.0
margin_right = 157.5
margin_bottom = 36.0
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="Panel/levelDisplayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -36.0
margin_right = -81.5
margin_bottom = 36.0
text = "PREVIOUS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreGameClientPanel" parent="." instance=ExtResource( 1 )]
visible = true
margin_left = -472.987
margin_top = -270.58
margin_right = -309.987
margin_bottom = 3.41962
[connection signal="pressed" from="Panel/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Panel/levelDisplayer/Next" to="Panel/levelDisplayer" method="_on_Next_pressed"]
[connection signal="pressed" from="Panel/levelDisplayer/Previous" to="Panel/levelDisplayer" method="_on_Previous_pressed"]
